--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: nasfong/machine-learning:latest
+    # image: nasfong/machine-learning:latest
     container_name: ml-api
     ports:
       - "8000:8000"
+    environment:
+      - MONGO_URL=mongodb://admin:your_mongo_password@mongodb.nasfong.site:443/motor?ssl=true&authSource=admin
     volumes:
       # Mount entire source for hot reload
       - .:/app
     restart: always
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
