--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.5.0
-numpy==1.26.2
+fastapi>=0.111,<1
+uvicorn[standard]>=0.30,<1
+motor>=3.5,<4
+pydantic>=1.10,<3
+python-dotenv>=1.0,<2
