--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGO_URL=mongodb://admin:your_mongo_password@mongodb.nasfong.site:443/motor?ssl=true&authSource=admin
+MINIO_ENDPOINT=https://minio-api.nasfong.site
+MINIO_ACCESS_KEY=admin
+MINIO_SECRET_KEY=Rening007minio
+MINIO_SECURE=false
