--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ uvicorn[standard]>=0.30,<1
 motor>=3.5,<4
 pydantic>=1.10,<3
 python-dotenv>=1.0,<2
+
+# Video transcoding dependencies
+minio>=7.2,<8
+python-multipart>=0.0.6,<1
